--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <h3 class="author_name">Floyd Miles</h3>
                             <p class="author_text">Content Writer @Company</p>
                             <img src="/img/Icons_img.jpg" alt="icons_img" class="icons_img">
-                        </div>
+                        </div>`
                 </div>
             </div>
         </div>
