--- a/index.html
+++ b/index.html
@@ -17,58 +17,160 @@
     <section class="authors">
         <div class="container">
             <h2 class="authors-title"> List of Authors </h2>
-            <div class="block">
-                <div class="block-row">
-                        <div class="block-row-element-content">
-                            <img src="./img/https_/www.pexels.com/photo/Author_img_1.jpg" alt="author_img" class="author_img">
-                            <h3 class="author_name">Floyd Miles</h3>
-                            <p class="author_text">Content Writer @Company</p>
-                            <img src="/img/Icons_img.jpg" alt="icons_img" class="icons_img">
-                        </div>
-                        <div class="block-row-element-content">
-                            <img src="./img/https_/www.pexels.com/photo/Author_img_1.jpg" alt="author_img" class="author_img">
-                            <h3 class="author_name">Floyd Miles</h3>
-                            <p class="author_text">Content Writer @Company</p>
-                            <img src="/img/Icons_img.jpg" alt="icons_img" class="icons_img">
-                        </div>
-                        <div class="block-row-element-content">
-                            <img src="./img/https_/www.pexels.com/photo/Author_img_1.jpg" alt="author_img" class="author_img">
-                            <h3 class="author_name">Floyd Miles</h3>
-                            <p class="author_text">Content Writer @Company</p>
-                            <img src="/img/Icons_img.jpg" alt="icons_img" class="icons_img">
-                        </div>
-                        <div class="block-row-element-content">
-                            <img src="./img/https_/www.pexels.com/photo/Author_img_1.jpg" alt="author_img" class="author_img">
-                            <h3 class="author_name">Floyd Miles</h3>
-                            <p class="author_text">Content Writer @Company</p>
-                            <img src="/img/Icons_img.jpg" alt="icons_img" class="icons_img">
-                        </div>
-                        <div class="block-row-element-content">
-                            <img src="./img/https_/www.pexels.com/photo/Author_img_1.jpg" alt="author_img" class="author_img">
-                            <h3 class="author_name">Floyd Miles</h3>
-                            <p class="author_text">Content Writer @Company</p>
-                            <img src="/img/Icons_img.jpg" alt="icons_img" class="icons_img">
-                        </div>
-                        <div class="block-row-element-content">
-                            <img src="./img/https_/www.pexels.com/photo/Author_img_1.jpg" alt="author_img" class="author_img">
-                            <h3 class="author_name">Floyd Miles</h3>
-                            <p class="author_text">Content Writer @Company</p>
-                            <img src="/img/Icons_img.jpg" alt="icons_img" class="icons_img">
-                        </div>
-                        <div class="block-row-element-content">
-                            <img src="./img/https_/www.pexels.com/photo/Author_img_1.jpg" alt="author_img" class="author_img">
-                            <h3 class="author_name">Floyd Miles</h3>
-                            <p class="author_text">Content Writer @Company</p>
-                            <img src="/img/Icons_img.jpg" alt="icons_img" class="icons_img">
-                        </div>
-                        <div class="block-row-element-content">
-                            <img src="./img/https_/www.pexels.com/photo/Author_img_1.jpg" alt="author_img" class="author_img">
-                            <h3 class="author_name">Floyd Miles</h3>
-                            <p class="author_text">Content Writer @Company</p>
-                            <img src="/img/Icons_img.jpg" alt="icons_img" class="icons_img">
-                        </div>`
-                </div>
-            </div>
+            <ul class="authors-list">
+                <li class="authors-list-item">
+                    <img src="./img/Author_img1.png" alt="author-img" class="author-img">
+                    <h3 class="author-name">Floyd Miles</h3>
+                    <p class="author-text">Content Writer @Company</p>
+                    <ul class="authors-list-item-iconlist">
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/Facebook/Negative.jpg" alt="Facebook"></a>
+                        </li>
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/Twitter/Negative.png" alt="Twitter"></a>
+                        </li>
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/Instagram/Negative.jpg" alt="Instagram"></a>
+                        </li>
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/LinkedIn/Negative.png" alt="LinkedIn"></a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="authors-list-item" id="yellow">
+                    <img src="./img/Author_img2.png" alt="author-img" class="author-img">
+                    <h3 class="author-name">Dianne Russell</h3>
+                    <p class="author-text">Content Writer @Company</p>
+                    <ul class="authors-list-item-iconlist">
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/Facebook/Negative.jpg" alt="Facebook"></a>
+                        </li>
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/Twitter/Negative.png" alt="Twitter"></a>
+                        </li>
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/Instagram/Negative.jpg" alt="Instagram"></a>
+                        </li>
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/LinkedIn/Negative.png" alt="LinkedIn"></a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="authors-list-item">
+                    <img src="./img/Author_img3.png" alt="author-img" class="author-img">
+                    <h3 class="author-name">Jenny Wilson</h3>
+                    <p class="author-text">Content Writer @Company</p>
+                    <ul class="authors-list-item-iconlist">
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/Facebook/Negative.jpg" alt="Facebook"></a>
+                        </li>
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/Twitter/Negative.png" alt="Twitter"></a>
+                        </li>
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/Instagram/Negative.jpg" alt="Instagram"></a>
+                        </li>
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/LinkedIn/Negative.png" alt="LinkedIn"></a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="authors-list-item">
+                    <img src="./img/Author_img4.png" alt="author-img" class="author-img">
+                    <h3 class="author-name">Leslie Alexander</h3>
+                    <p class="author-text">Content Writer @Company</p>
+                    <ul class="authors-list-item-iconlist">
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/Facebook/Negative.jpg" alt="Facebook"></a>
+                        </li>
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/Twitter/Negative.png" alt="Twitter"></a>
+                        </li>
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/Instagram/Negative.jpg" alt="Instagram"></a>
+                        </li>
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/LinkedIn/Negative.png" alt="LinkedIn"></a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="authors-list-item">
+                    <img src="./img/Author_img5.png" alt="author-img" class="author-img">
+                    <h3 class="author-name">Guy Hawkins</h3>
+                    <p class="author-text">Content Writer @Company</p>
+                    <ul class="authors-list-item-iconlist">
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/Facebook/Negative.jpg" alt="Facebook"></a>
+                        </li>
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/Twitter/Negative.png" alt="Twitter"></a>
+                        </li>
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/Instagram/Negative.jpg" alt="Instagram"></a>
+                        </li>
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/LinkedIn/Negative.png" alt="LinkedIn"></a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="authors-list-item">
+                    <img src="./img/Author_img6.png" alt="author-img" class="author-img">
+                    <h3 class="author-name">Eleanor Pena</h3>
+                    <p class="author-text">Content Writer @Company</p>
+                    <ul class="authors-list-item-iconlist">
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/Facebook/Negative.jpg" alt="Facebook"></a>
+                        </li>
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/Twitter/Negative.png" alt="Twitter"></a>
+                        </li>
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/Instagram/Negative.jpg" alt="Instagram"></a>
+                        </li>
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/LinkedIn/Negative.png" alt="LinkedIn"></a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="authors-list-item">
+                    <img src="./img/Author_img7.png" alt="author-img" class="author-img">
+                    <h3 class="author-name">Robert Fox</h3>
+                    <p class="author-text">Content Writer @Company</p>
+                    <ul class="authors-list-item-iconlist">
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/Facebook/Negative.jpg" alt="Facebook"></a>
+                        </li>
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/Twitter/Negative.png" alt="Twitter"></a>
+                        </li>
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/Instagram/Negative.jpg" alt="Instagram"></a>
+                        </li>
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/LinkedIn/Negative.png" alt="LinkedIn"></a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="authors-list-item">
+                    <img src="./img/Author_img8.png" alt="author-img" class="author-img">
+                    <h3 class="author-name">Jacob Jones</h3>
+                    <p class="author-text">Content Writer @Company</p>
+                    <ul class="authors-list-item-iconlist">
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/Facebook/Negative.jpg" alt="Facebook"></a>
+                        </li>
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/Twitter/Negative.png" alt="Twitter"></a>
+                        </li>
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/Instagram/Negative.jpg" alt="Instagram"></a>
+                        </li>
+                        <li class="authors-list-item-iconlist-item">
+                            <a href=""><img src="./img/LinkedIn/Negative.png" alt="LinkedIn"></a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
         </div>
     </section>
 </body>
