--- a/index.html
+++ b/index.html
@@ -19,154 +19,154 @@
             <h2 class="authors-title"> List of Authors </h2>
             <ul class="authors-list">
                 <li class="authors-list-item">
-                    <img src="./img/Author_img1.png" alt="author-img" class="author-img">
-                    <h3 class="author-name">Floyd Miles</h3>
-                    <p class="author-text">Content Writer @Company</p>
+                    <img src="./img/Floyd Miles.jpg" alt="author-img" class="authors-list-item-img">
+                    <h3 class="authors-list-item-name">Floyd Miles</h3>
+                    <p class="authors-list-item-text">Content Writer @Company</p>
                     <ul class="authors-list-item-iconlist">
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Facebook/Negative.jpg" alt="Facebook"></a>
+                            <a href=""><img src="./img/Facebook.jpg" alt="Facebook"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Twitter/Negative.png" alt="Twitter"></a>
+                            <a href=""><img src="./img/Twitter.png" alt="Twitter"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Instagram/Negative.jpg" alt="Instagram"></a>
+                            <a href=""><img src="./img/Instagram.jpg" alt="Instagram"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/LinkedIn/Negative.png" alt="LinkedIn"></a>
+                            <a href=""><img src="./img/LinkedIn.png" alt="LinkedIn"></a>
                         </li>
                     </ul>
                 </li>
                 <li class="authors-list-item" id="yellow">
-                    <img src="./img/Author_img2.png" alt="author-img" class="author-img">
-                    <h3 class="author-name">Dianne Russell</h3>
-                    <p class="author-text">Content Writer @Company</p>
+                    <img src="./img/Dianne Russell.jpg" alt="author-img" class="authors-list-item-img">
+                    <h3 class="authors-list-item-name">Dianne Russell</h3>
+                    <p class="authors-list-item-text">Content Writer @Company</p>
                     <ul class="authors-list-item-iconlist">
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Facebook/Negative.jpg" alt="Facebook"></a>
+                            <a href=""><img src="./img/Facebook.jpg" alt="Facebook"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Twitter/Negative.png" alt="Twitter"></a>
+                            <a href=""><img src="./img/Twitter.png" alt="Twitter"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Instagram/Negative.jpg" alt="Instagram"></a>
+                            <a href=""><img src="./img/Instagram.jpg" alt="Instagram"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/LinkedIn/Negative.png" alt="LinkedIn"></a>
+                            <a href=""><img src="./img/LinkedIn.png" alt="LinkedIn"></a>
                         </li>
                     </ul>
                 </li>
                 <li class="authors-list-item">
-                    <img src="./img/Author_img3.png" alt="author-img" class="author-img">
-                    <h3 class="author-name">Jenny Wilson</h3>
-                    <p class="author-text">Content Writer @Company</p>
+                    <img src="./img/Jenny Wilson.jpg" alt="author-img" class="authors-list-item-img">
+                    <h3 class="authors-list-item-name">Jenny Wilson</h3>
+                    <p class="authors-list-item-text">Content Writer @Company</p>
                     <ul class="authors-list-item-iconlist">
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Facebook/Negative.jpg" alt="Facebook"></a>
+                            <a href=""><img src="./img/Facebook.jpg" alt="Facebook"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Twitter/Negative.png" alt="Twitter"></a>
+                            <a href=""><img src="./img/Twitter.png" alt="Twitter"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Instagram/Negative.jpg" alt="Instagram"></a>
+                            <a href=""><img src="./img/Instagram.jpg" alt="Instagram"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/LinkedIn/Negative.png" alt="LinkedIn"></a>
+                            <a href=""><img src="./img/LinkedIn.png" alt="LinkedIn"></a>
                         </li>
                     </ul>
                 </li>
                 <li class="authors-list-item">
-                    <img src="./img/Author_img4.png" alt="author-img" class="author-img">
-                    <h3 class="author-name">Leslie Alexander</h3>
-                    <p class="author-text">Content Writer @Company</p>
+                    <img src="./img/Leslie Alexander.jpg" alt="author-img" class="authors-list-item-img">
+                    <h3 class="authors-list-item-name">Leslie Alexander</h3>
+                    <p class="authors-list-item-text">Content Writer @Company</p>
                     <ul class="authors-list-item-iconlist">
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Facebook/Negative.jpg" alt="Facebook"></a>
+                            <a href=""><img src="./img/Facebook.jpg" alt="Facebook"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Twitter/Negative.png" alt="Twitter"></a>
+                            <a href=""><img src="./img/Twitter.png" alt="Twitter"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Instagram/Negative.jpg" alt="Instagram"></a>
+                            <a href=""><img src="./img/Instagram.jpg" alt="Instagram"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/LinkedIn/Negative.png" alt="LinkedIn"></a>
+                            <a href=""><img src="./img/LinkedIn.png" alt="LinkedIn"></a>
                         </li>
                     </ul>
                 </li>
                 <li class="authors-list-item">
-                    <img src="./img/Author_img5.png" alt="author-img" class="author-img">
-                    <h3 class="author-name">Guy Hawkins</h3>
-                    <p class="author-text">Content Writer @Company</p>
+                    <img src="./img/Guy Hawkins.jpg" alt="author-img" class="authors-list-item-img">
+                    <h3 class="authors-list-item-name">Guy Hawkins</h3>
+                    <p class="authors-list-item-text">Content Writer @Company</p>
                     <ul class="authors-list-item-iconlist">
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Facebook/Negative.jpg" alt="Facebook"></a>
+                            <a href=""><img src="./img/Facebook.jpg" alt="Facebook"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Twitter/Negative.png" alt="Twitter"></a>
+                            <a href=""><img src="./img/Twitter.png" alt="Twitter"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Instagram/Negative.jpg" alt="Instagram"></a>
+                            <a href=""><img src="./img/Instagram.jpg" alt="Instagram"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/LinkedIn/Negative.png" alt="LinkedIn"></a>
+                            <a href=""><img src="./img/LinkedIn.png" alt="LinkedIn"></a>
                         </li>
                     </ul>
                 </li>
                 <li class="authors-list-item">
-                    <img src="./img/Author_img6.png" alt="author-img" class="author-img">
-                    <h3 class="author-name">Eleanor Pena</h3>
-                    <p class="author-text">Content Writer @Company</p>
+                    <img src="./img/Eleanor Pena.jpg" alt="author-img" class="authors-list-item-img">
+                    <h3 class="authors-list-item-name">Eleanor Pena</h3>
+                    <p class="authors-list-item-text">Content Writer @Company</p>
                     <ul class="authors-list-item-iconlist">
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Facebook/Negative.jpg" alt="Facebook"></a>
+                            <a href=""><img src="./img/Facebook.jpg" alt="Facebook"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Twitter/Negative.png" alt="Twitter"></a>
+                            <a href=""><img src="./img/Twitter.png" alt="Twitter"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Instagram/Negative.jpg" alt="Instagram"></a>
+                            <a href=""><img src="./img/Instagram.jpg" alt="Instagram"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/LinkedIn/Negative.png" alt="LinkedIn"></a>
+                            <a href=""><img src="./img/LinkedIn.png" alt="LinkedIn"></a>
                         </li>
                     </ul>
                 </li>
                 <li class="authors-list-item">
-                    <img src="./img/Author_img7.png" alt="author-img" class="author-img">
-                    <h3 class="author-name">Robert Fox</h3>
-                    <p class="author-text">Content Writer @Company</p>
+                    <img src="./img/Robert Fox.jpg" alt="author-img" class="authors-list-item-img">
+                    <h3 class="authors-list-item-name">Robert Fox</h3>
+                    <p class="authors-list-item-text">Content Writer @Company</p>
                     <ul class="authors-list-item-iconlist">
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Facebook/Negative.jpg" alt="Facebook"></a>
+                            <a href=""><img src="./img/Facebook.jpg" alt="Facebook"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Twitter/Negative.png" alt="Twitter"></a>
+                            <a href=""><img src="./img/Twitter.png" alt="Twitter"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Instagram/Negative.jpg" alt="Instagram"></a>
+                            <a href=""><img src="./img/Instagram.jpg" alt="Instagram"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/LinkedIn/Negative.png" alt="LinkedIn"></a>
+                            <a href=""><img src="./img/LinkedIn.png" alt="LinkedIn"></a>
                         </li>
                     </ul>
                 </li>
                 <li class="authors-list-item">
-                    <img src="./img/Author_img8.png" alt="author-img" class="author-img">
-                    <h3 class="author-name">Jacob Jones</h3>
-                    <p class="author-text">Content Writer @Company</p>
+                    <img src="./img/Jacob Jones.jpg" alt="author-img" class="authors-list-item-img">
+                    <h3 class="authors-list-item-name">Jacob Jones</h3>
+                    <p class="authors-list-item-text">Content Writer @Company</p>
                     <ul class="authors-list-item-iconlist">
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Facebook/Negative.jpg" alt="Facebook"></a>
+                            <a href=""><img src="./img/Facebook.jpg" alt="Facebook"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Twitter/Negative.png" alt="Twitter"></a>
+                            <a href=""><img src="./img/Twitter.png" alt="Twitter"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Instagram/Negative.jpg" alt="Instagram"></a>
+                            <a href=""><img src="./img/Instagram.jpg" alt="Instagram"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/LinkedIn/Negative.png" alt="LinkedIn"></a>
+                            <a href=""><img src="./img/LinkedIn.png" alt="LinkedIn"></a>
                         </li>
                     </ul>
                 </li>
