--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
                     <p class="authors-list-item-text">Content Writer @Company</p>
                     <ul class="authors-list-item-iconlist">
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Facebook.jpg" alt="Facebook"></a>
+                            <a href="https://www.facebook.com/100064510729644/posts/1106834934810187/"><img src="./img/Facebook.jpg" alt="Facebook"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Twitter.png" alt="Twitter"></a>
+                            <a href="https://x.com"><img src="./img/Twitter.png" alt="Twitter"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Instagram.jpg" alt="Instagram"></a>
+                            <a href="https://www.instagram.com"><img src="./img/Instagram.jpg" alt="Instagram"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/LinkedIn.png" alt="LinkedIn"></a>
+                            <a href="https://ua.linkedin.com"><img src="./img/LinkedIn.png" alt="LinkedIn"></a>
                         </li>
                     </ul>
                 </li>
@@ -43,16 +43,16 @@
                     <p class="authors-list-item-text">Content Writer @Company</p>
                     <ul class="authors-list-item-iconlist">
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Facebook.jpg" alt="Facebook"></a>
+                            <a href="https://www.facebook.com/100064510729644/posts/1106834934810187/"><img src="./img/Facebook.jpg" alt="Facebook"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Twitter.png" alt="Twitter"></a>
+                            <a href="https://x.com"><img src="./img/Twitter.png" alt="Twitter"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Instagram.jpg" alt="Instagram"></a>
+                            <a href="https://www.instagram.com"><img src="./img/Instagram.jpg" alt="Instagram"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/LinkedIn.png" alt="LinkedIn"></a>
+                            <a href="https://ua.linkedin.com"><img src="./img/LinkedIn.png" alt="LinkedIn"></a>
                         </li>
                     </ul>
                 </li>
@@ -62,16 +62,16 @@
                     <p class="authors-list-item-text">Content Writer @Company</p>
                     <ul class="authors-list-item-iconlist">
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Facebook.jpg" alt="Facebook"></a>
+                            <a href="https://www.facebook.com/100064510729644/posts/1106834934810187/"><img src="./img/Facebook.jpg" alt="Facebook"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Twitter.png" alt="Twitter"></a>
+                            <a href="https://x.com"><img src="./img/Twitter.png" alt="Twitter"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Instagram.jpg" alt="Instagram"></a>
+                            <a href="https://www.instagram.com"><img src="./img/Instagram.jpg" alt="Instagram"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/LinkedIn.png" alt="LinkedIn"></a>
+                            <a href="https://ua.linkedin.com"><img src="./img/LinkedIn.png" alt="LinkedIn"></a>
                         </li>
                     </ul>
                 </li>
@@ -81,16 +81,16 @@
                     <p class="authors-list-item-text">Content Writer @Company</p>
                     <ul class="authors-list-item-iconlist">
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Facebook.jpg" alt="Facebook"></a>
+                            <a href="https://www.facebook.com/100064510729644/posts/1106834934810187/"><img src="./img/Facebook.jpg" alt="Facebook"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Twitter.png" alt="Twitter"></a>
+                            <a href="https://x.com"><img src="./img/Twitter.png" alt="Twitter"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Instagram.jpg" alt="Instagram"></a>
+                            <a href="https://www.instagram.com"><img src="./img/Instagram.jpg" alt="Instagram"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/LinkedIn.png" alt="LinkedIn"></a>
+                            <a href="https://ua.linkedin.com"><img src="./img/LinkedIn.png" alt="LinkedIn"></a>
                         </li>
                     </ul>
                 </li>
@@ -100,16 +100,16 @@
                     <p class="authors-list-item-text">Content Writer @Company</p>
                     <ul class="authors-list-item-iconlist">
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Facebook.jpg" alt="Facebook"></a>
+                            <a href="https://www.facebook.com/100064510729644/posts/1106834934810187/"><img src="./img/Facebook.jpg" alt="Facebook"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Twitter.png" alt="Twitter"></a>
+                            <a href="https://x.com"><img src="./img/Twitter.png" alt="Twitter"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Instagram.jpg" alt="Instagram"></a>
+                            <a href="https://www.instagram.com"><img src="./img/Instagram.jpg" alt="Instagram"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/LinkedIn.png" alt="LinkedIn"></a>
+                            <a href="https://ua.linkedin.com"><img src="./img/LinkedIn.png" alt="LinkedIn"></a>
                         </li>
                     </ul>
                 </li>
@@ -119,16 +119,16 @@
                     <p class="authors-list-item-text">Content Writer @Company</p>
                     <ul class="authors-list-item-iconlist">
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Facebook.jpg" alt="Facebook"></a>
+                            <a href="https://www.facebook.com/100064510729644/posts/1106834934810187/"><img src="./img/Facebook.jpg" alt="Facebook"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Twitter.png" alt="Twitter"></a>
+                            <a href="https://x.com"><img src="./img/Twitter.png" alt="Twitter"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Instagram.jpg" alt="Instagram"></a>
+                            <a href="https://www.instagram.com"><img src="./img/Instagram.jpg" alt="Instagram"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/LinkedIn.png" alt="LinkedIn"></a>
+                            <a href="https://ua.linkedin.com"><img src="./img/LinkedIn.png" alt="LinkedIn"></a>
                         </li>
                     </ul>
                 </li>
@@ -138,16 +138,16 @@
                     <p class="authors-list-item-text">Content Writer @Company</p>
                     <ul class="authors-list-item-iconlist">
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Facebook.jpg" alt="Facebook"></a>
+                            <a href="https://www.facebook.com/100064510729644/posts/1106834934810187/"><img src="./img/Facebook.jpg" alt="Facebook"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Twitter.png" alt="Twitter"></a>
+                            <a href="https://x.com"><img src="./img/Twitter.png" alt="Twitter"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Instagram.jpg" alt="Instagram"></a>
+                            <a href="https://www.instagram.com"><img src="./img/Instagram.jpg" alt="Instagram"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/LinkedIn.png" alt="LinkedIn"></a>
+                            <a href="https://ua.linkedin.com"><img src="./img/LinkedIn.png" alt="LinkedIn"></a>
                         </li>
                     </ul>
                 </li>
@@ -157,16 +157,16 @@
                     <p class="authors-list-item-text">Content Writer @Company</p>
                     <ul class="authors-list-item-iconlist">
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Facebook.jpg" alt="Facebook"></a>
+                            <a href="https://www.facebook.com/100064510729644/posts/1106834934810187/"><img src="./img/Facebook.jpg" alt="Facebook"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Twitter.png" alt="Twitter"></a>
+                            <a href="https://x.com"><img src="./img/Twitter.png" alt="Twitter"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/Instagram.jpg" alt="Instagram"></a>
+                            <a href="https://www.instagram.com"><img src="./img/Instagram.jpg" alt="Instagram"></a>
                         </li>
                         <li class="authors-list-item-iconlist-item">
-                            <a href=""><img src="./img/LinkedIn.png" alt="LinkedIn"></a>
+                            <a href="https://ua.linkedin.com"><img src="./img/LinkedIn.png" alt="LinkedIn"></a>
                         </li>
                     </ul>
                 </li>
